--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "babel-runtime": "6.26.0",
-    "chart.js": "^2.7.0",
     "css-loader": "0.28.7",
     "express": "4.15.4",
     "file-loader": "0.11.2",
@@ -33,16 +32,16 @@
     "precss": "2.0.0",
     "prop-types": "15.5.10",
     "react": "15.6.1",
-    "react-chartjs-2": "^2.6.2",
     "react-dom": "15.6.1",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-devtools-extension": "2.13.2",
     "redux-form": "7.0.4",
-    "redux-persist": "4.9.1",
+    "redux-persist": "4.10.0",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "webpack": "3.5.6"
+    "webpack": "3.5.6",
+    "whatwg-fetch": "2.0.3"
   }
 }
