--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "start": "node ./app.js"
+    "build": "webpack --config ./webpack.prod.config.js --progress",
+    "start": "node ./app.js",
+    "heroku-postbuild": "webpack --config ./webpack.prod.config.js --progress"
   },
   "author": "",
   "devDependencies": {
     "babel-plugin-transform-runtime": "6.23.0",
+    "compression-webpack-plugin": "1.0.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "html-webpack-plugin": "2.30.1",
     "postcss-loader": "2.0.6",
+    "preload-webpack-plugin": "2.0.0",
     "react-hot-loader": "3.0.0-beta.7",
+    "script-ext-html-webpack-plugin": "1.8.5",
+    "style-ext-html-webpack-plugin": "3.4.1",
     "webpack-dev-middleware": "1.12.0",
     "webpack-hot-middleware": "2.19.1"
   },
